# index-memory-vault

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  imv-cli.spec  imv-server.spec  pyproject.toml
docs/: internals.md
imv/: cli.py  probe.py  server.py  store.py
imv/installer/: __init__.py  config_merge.py  windows.py
imv/portal/: __init__.py  app.py  store.py
imv/portal/static/: login.html  member.js  privacy.html  register.html  releases.html
installer/: imv-setup.iss
scripts/: build_windows.ps1  imv_cli_entry.py  imv_server_entry.py
tests/: test_config_merge.py  test_doctor.py  test_mcp_integration.py  test_portal.py  test_portal_pages.py  test_store.py
