[project]
name = "index-memory-vault"
version = "0.1.0"
description = "Self-hosted AI memory server with user-owned storage and human approval gates (MCP)"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
dependencies = ["mcp>=1.2"]

[project.scripts]
imv = "imv.cli:main"
imv-server = "imv.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["imv*"]
